--- a/Application/Home/View/Admin/activityuser.html
+++ b/Application/Home/View/Admin/activityuser.html
@@ -24,12 +24,11 @@
 </style>
 
 <div class="row col-xs-10">
-	<!-- <form action="" method="post"> -->
 		<div class="form-group">
 		  <label>选择活动主题：</label>
 		  <select name="activity" id="activity">
 		  	<volist name="activityArr" id="vo">
-		  		<if condition='$activityId neq $vo.id'>
+		  		<if condition='$activityId neq $vo["id"]'>
 	  			<option value="{$vo.id}">{$vo.title}</option>
 		  			<else />
 		  			<option value="{$vo.id}" selected>{$vo.title}</option>
@@ -39,7 +38,42 @@
 		  <button class="btn btn-primary btn-sm confirm-activity" onclick="confirmActivity()">确认</button>
 		</div>
 
-		<div class="form-group">
+		<div class="tabbable" id="tabs-240999">
+			<ul class="nav nav-tabs">
+				<li class="active">
+					<a href="#panel-220731" data-toggle="tab">已激活的用户：</a>
+				</li>
+				<li>
+					<a href="#panel-618767" data-toggle="tab">待激活的用户：</a>
+				</li>
+			</ul>
+			<div class="tab-content">
+				<div class="tab-pane active" id="panel-220731">
+					<ul class="list-group userlist">
+						<volist name="useractive" id="vo" key="k">
+						<li class="list-group-item">
+							<span>{$k}、</span>
+							<span>{$vo.account}</span>
+							<span><a href="__URL__/deleteActivityUser/deleteid/{$vo.id}/id/{$activityId}">删除</a></span>
+						</li>
+						</volist>
+					</ul>
+				</div>
+				<div class="tab-pane" id="panel-618767">
+					<ul class="list-group userlist">
+						<volist name="userinactive" id="vo" key="k">
+						<li class="list-group-item">
+							<span>{$k}、</span>
+							<span>{$vo.account}</span>
+							<span><a href="__URL__/addActivityUser/addid/{$vo.id}/id/{$activityId}">添加</a></span>
+						</li>
+						</volist>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<!-- <div class="form-group">
 		  <label>该活动的用户：</label>
 		  <ul class="list-group userlist">
 		   <volist name="userlist" id="vo" key="k">
@@ -50,8 +84,8 @@
 		  	</li>
 		   </volist>
 		  </ul>
-		</div>
-		<form action="__URL__/addactivityusers" method="post">
+		</div> -->
+		<!-- <form action="__URL__/addactivityusers" method="post">
 		<div class="form-group">
 		  <label>添加用户（格式：xx1,xx2,xx3,xx4）：</label>
 		  <input type="text" class="form-control" name="addusers" id="addusers">
@@ -61,8 +95,8 @@
 		<div class="form-group">
 			<button type="submit" class="btn btn-primary btn-block">添加</button>
 		</div>	
-		</form>	
-	<!-- </form> -->
+		</form>	 -->
 </div>
+
 
 <include file="Public/footer" />
