--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -43,9 +43,9 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+       <ul class="nav navbar-nav">
+        <li class="active"><a href="__APP__">首页 <span class="sr-only">(current)</span></a></li>
+        <!-- <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -57,9 +57,9 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <!--<form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
@@ -68,7 +68,7 @@
       <ul class="nav navbar-nav navbar-right">
       	<li>
       	<if condition='$userid'>
-	  		<a href="__URL__/logout">退出</a>
+	  		<a href="__APP__/Home/index/logout">退出</a>
 	  	<else /><a href="__APP__">登录</a>
 	  	</if>
         </li>
