--- a/Application/Home/View/Admin/addoption.html
+++ b/Application/Home/View/Admin/addoption.html
@@ -17,11 +17,11 @@
 		var avtivityId=$('#activity').val();
 		window.location='__URL__/optionlist/id/'+avtivityId;
 	}
-	function addoption(){
-		var avtivityId=$('#activity').val();
-		var content=$("#addoption").val();
-		window.location='__URL__/addoption/id/'+avtivityId+'/content/'+content;
-	}
+	// function addoption(){
+	// 	var avtivityId=$('#activity').val();
+	// 	var content=$("#addoption").val();
+	// 	window.location='__URL__/addoption/id/'+avtivityId+'/content/'+content;
+	// }
 </script>
 
 <div class="row col-xs-10 activity">
@@ -52,16 +52,24 @@
 		   </volist>
 		  </ul>
 		</div>
-		<div class="form-group">
-		  <label>添加选项：</label>
-		  <input type="text" class="form-control" name="addoption" id="addoption">
-		</div>
+		<notempty name="activityId">
+			<form action="__URL__/addoption" method="post" enctype="multipart/form-data">
+				<div class="form-group">
+				  <label>添加选项：</label>
+				  <input type="text" class="form-control" name="addoption" id="addoption">
+				  <input type="hidden" class="form-control" name="activityid" value="{$activityId}">
+				</div>
+				<div class="form-group">
+				  <label>活动图片上传（目前仅限jpg格式、图片最大2M）：</label>
+				  <input type="file" class="form-control" name="myfile" accept="image/jpg">
+				  <!-- <input type="hidden" class="form-control" name="MAX_FILE_SIZE" value="2000000" > -->
+				</div>
 
-
-		<div class="form-group">
-			<button class="btn btn-primary btn-block" onclick="addoption()">添加</button>
-		</div>		
-	<!-- </form> -->
+				<div class="form-group">
+					<button class="btn btn-primary btn-block submit">添加</button>
+				</div>		
+			</form>
+		</notempty>
 </div>
 
 <include file="Public/footer" />
