--- a/Application/Home/View/Admin/createactivity.html
+++ b/Application/Home/View/Admin/createactivity.html
@@ -2,7 +2,7 @@
 <include file="Public/side" />
 
 <div class="row col-xs-10 activity">
-	<form action="__URL__/createactivity" method="post">
+	<form action="__URL__/createactivity" method="post" enctype="multipart/form-data">
 		<div class="form-group">
 		  <label>活动主题：</label>
 		  <input type="text" class="form-control" placeholder="活动主题" name="title">
@@ -21,6 +21,12 @@
 		<div class="form-group">
 		  <label>活动截止时间：</label>
 		  <input type="date" class="form-control" name="endtime">
+		</div>
+
+		<div class="form-group">
+		  <label>活动图片上传（目前仅限jpg格式、图片最大2M）：</label>
+		  <input type="file" class="form-control" name="myfile" accept="image/jpg">
+		  <!-- <input type="hidden" class="form-control" name="MAX_FILE_SIZE" value="2000000" > -->
 		</div>
 
 		<div class="form-group">
