--- a/Application/Home/View/Public/side.html
+++ b/Application/Home/View/Public/side.html
@@ -24,6 +24,12 @@
 		<li {$sideOrder|isActive=###,"addoptions"}>
 			<a href="__APP__/Home/admin/addoptions">添加选项</a>
 		</li>
+		<li class="nav-header">
+			投票结果
+		</li>
+		<li {$sideOrder|isActive=###,"voteresult"}>
+			<a href="__APP__/Home/admin/voteresult">投票结果</a>
+		</li>
 		<li class="divider">
 		</li>
 		<!-- <li>
